--- a/package.json
+++ b/package.json
@@ -18,8 +18,10 @@
   "dependencies": {
     "bluebird": "^3.5.1",
     "body-parser": "^1.18.3",
+    "eslint": "^5.16.0",
     "express": "^4.16.3",
     "morgan": "^1.9.0",
+    "nodemon": "^1.18.11",
     "sprintf-js": "^1.1.1",
     "underscore": "^1.9.1"
   },
